RESOLVED FIXED276620
Crash in WebViewRenderingUpdateScheduler::postRenderingUpdateCallback
https://bugs.webkit.org/show_bug.cgi?id=276620
Summary Crash in WebViewRenderingUpdateScheduler::postRenderingUpdateCallback
Ryosuke Niwa
Reported 2024-07-15 12:35:22 PDT
e.g. 0 WebCore 0x1a6fb3270 WTF::RetainPtr<__CFRunLoopObserver*>::operator bool() const + 0 (/AppleInternal/Library/BuildRoots/86ff5f1d-3642-11ef-a344-1aec23608739/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.0.Internal.sdk/usr/local/include/wtf/RetainPtr.h:134) [inlined] 1 WebCore 0x1a6fb3270 WebCore::RunLoopObserver::invalidate() + 20 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/platform/cf/RunLoopObserverCF.cpp:94) 2 WebKitLegacy 0x1f134e608 WebViewRenderingUpdateScheduler::postRenderingUpdateCallback() + 28 (/Library/Caches/com.apple.xbs/Sources/WebKitLegacy/Source/WebKitLegacy/mac/WebView/WebViewRenderingUpdateScheduler.mm:123) [inlined] 3 WebKitLegacy 0x1f134e608 WebViewRenderingUpdateScheduler::WebViewRenderingUpdateScheduler(WebView*)::$_1::operator()() const + 28 (/Library/Caches/com.apple.xbs/Sources/WebKitLegacy/Source/WebKitLegacy/mac/WebView/WebViewRenderingUpdateScheduler.mm:48) [inlined] 4 WebKitLegacy 0x1f134e608 WTF::Detail::CallableWrapper<WebViewRenderingUpdateScheduler::WebViewRenderingUpdateScheduler(WebView*)::$_1, void>::call() + 48 (/AppleInternal/Library/BuildRoots/86ff5f1d-3642-11ef-a344-1aec23608739/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.0.Internal.sdk/usr/local/include/wtf/Function.h:53) 5 CoreFoundation 0x193581dc4 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ + 36 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1771) 6 CoreFoundation 0x193581b68 __CFRunLoopDoObservers + 552 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1884) 7 CoreFoundation 0x1935b0b88 __CFRunLoopRun + 972 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2965) 8 CoreFoundation 0x1935b0318 CFRunLoopRunSpecific + 572 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3402) 9 GraphicsServices 0x1dff881c4 GSEventRunModal + 164 (/Library/Caches/com.apple.xbs/Sources/GraphicsServices/GSEvent.c:2196) 10 UIKitCore 0x1960f7e98 -[UIApplication _run] + 816 (/Library/Caches/com.apple.xbs/Sources/UIKitCore/UIApplication.m:3789) 11 UIKitCore 0x1961a68b8 UIApplicationMain + 340 (/Library/Caches/com.apple.xbs/Sources/UIKitCore/UIApplication.m:5439)
Attachments
Ryosuke Niwa
Comment 1 2024-07-15 13:06:04 PDT
EWS
Comment 2 2024-07-15 15:39:37 PDT
Committed 280989@main (03200a8c0807): <https://commits.webkit.org/280989@main> Reviewed commits have been landed. Closing PR #30830 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-15 15:40:16 PDT
EWS
Comment 4 2024-07-17 08:45:10 PDT
Committed 280938.18@integration/ci/131484445_03200a8c08_safari-7619-branch (6c8e3a4483ce): <https://commits.webkit.org/280938.18@integration/ci/131484445_03200a8c08_safari-7619-branch> Reviewed commits have been landed. Closing PR #1379 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.