Cherry-pick 03200a8c0807. rdar://131484445

Crash in WebViewRenderingUpdateScheduler::postRenderingUpdateCallback
    https://bugs.webkit.org/show_bug.cgi?id=276620

    Reviewed by Chris Dumez and Wenson Hsieh.

    Speculative fix. Use WeakPtr and CheckedPtr to better life-time manage WebViewRenderingUpdateScheduler,
    and grab the web thread lock before converting WeakPtr to CheckedPtr.

    * Source/WebKitLegacy/mac/WebView/WebViewRenderingUpdateScheduler.h:
    * Source/WebKitLegacy/mac/WebView/WebViewRenderingUpdateScheduler.mm:
    (WebViewRenderingUpdateScheduler::WebViewRenderingUpdateScheduler):
    (WebViewRenderingUpdateScheduler::invalidate):
    (WebViewRenderingUpdateScheduler::renderingUpdateRunLoopObserverCallback):
    (WebViewRenderingUpdateScheduler::postRenderingUpdateCallback):

    Canonical link: https://commits.webkit.org/280989@main

Canonical link: https://commits.webkit.org/280938.18@integration/ci/131484445_03200a8c08_safari-7619-branch