Source/WebKitLegacy/mac/WebView/WebViewRenderingUpdateScheduler.mm
@@ -38,14 +38,29 @@
 WebViewRenderingUpdateScheduler::WebViewRenderingUpdateScheduler(WebView* webView)
     : m_webView(webView)
 {
+    ASSERT(isMainThread());
     ASSERT_ARG(webView, webView);
 
-    m_renderingUpdateRunLoopObserver = makeUnique<WebCore::RunLoopObserver>(WebCore::RunLoopObserver::WellKnownOrder::RenderingUpdate, [this] {
-        this->renderingUpdateRunLoopObserverCallback();
+    m_renderingUpdateRunLoopObserver = makeUnique<WebCore::RunLoopObserver>(WebCore::RunLoopObserver::WellKnownOrder::RenderingUpdate, [weakThis = WeakPtr { this }] {
+#if PLATFORM(IOS_FAMILY)
+        // Normally the layer flush callback happens before the web lock auto-unlock observer runs.
+        // However if the flush is rescheduled from the callback it may get pushed past it, to the next cycle.
+        WebThreadLock();
+#endif
+        CheckedPtr checkedThis = weakThis.get();
+        if (!checkedThis)
+            return;
+        checkedThis->renderingUpdateRunLoopObserverCallback();
     });
 
-    m_postRenderingUpdateRunLoopObserver = makeUnique<WebCore::RunLoopObserver>(WebCore::RunLoopObserver::WellKnownOrder::PostRenderingUpdate, [this] {
-        this->postRenderingUpdateCallback();
+    m_postRenderingUpdateRunLoopObserver = makeUnique<WebCore::RunLoopObserver>(WebCore::RunLoopObserver::WellKnownOrder::PostRenderingUpdate, [weakThis = WeakPtr { this }] {
+#if PLATFORM(IOS_FAMILY)
+        WebThreadLock();
+#endif
+        CheckedPtr checkedThis = weakThis.get();
+        if (!checkedThis)
+            return;
+        checkedThis->postRenderingUpdateCallback();
     });
 }
 
@@ -61,6 +76,7 @@ void WebViewRenderingUpdateScheduler::scheduleRenderingUpdate()
 
 void WebViewRenderingUpdateScheduler::invalidate()
 {
+    ASSERT(isMainThread());
     m_webView = nullptr;
     m_renderingUpdateRunLoopObserver->invalidate();
     m_postRenderingUpdateRunLoopObserver->invalidate();
@@ -96,12 +112,6 @@ void WebViewRenderingUpdateScheduler::registerCACommitHandlers()
 
 void WebViewRenderingUpdateScheduler::renderingUpdateRunLoopObserverCallback()
 {
-#if PLATFORM(IOS_FAMILY)
-    // Normally the layer flush callback happens before the web lock auto-unlock observer runs.
-    // However if the flush is rescheduled from the callback it may get pushed past it, to the next cycle.
-    WebThreadLock();
-#endif
-
     SetForScope insideCallbackScope(m_insideCallback, true);
     m_rescheduledInsideCallback = false;
 
@@ -114,10 +124,6 @@ void WebViewRenderingUpdateScheduler::renderingUpdateRunLoopObserverCallback()
 
 void WebViewRenderingUpdateScheduler::postRenderingUpdateCallback()
 {
-#if PLATFORM(IOS_FAMILY)
-    WebThreadLock();
-#endif
-
     @autoreleasepool {
         [m_webView _didCompleteRenderingFrame];
         m_postRenderingUpdateRunLoopObserver->invalidate();
